hphp/test/slow/like_types/like_casts_bad3.php.expectf

Fatal error: Expected constant expression for initializer in %s/hphp/test/slow/like_types/like_casts_bad3.php on line 4
